
2018-03-10  Andres Abdo  <andres@andres-ThinkPad-T450s>

	* Web/speax/staticfiles/images/ajax-loading-gif-3.gif:
	added this loading gif to the images directory inside the staticfiles.

	* Web/speax/speaxapp/templates/speaxapp/simple_upload.html:
	added a loading spinner to the UI to inform the user that the app is
	processing after the user clicks the upload button.

2018-03-10  Sherry Lin  <sjslin@gmail.com>

	* xml_parser/xml.py: moved duplicate code into a new function, handle_div()
	added some code in handle_div() for removing extra whitespace

2018-03-07  Hanjun Li  <h1212@g.ucla.edu>

	* Web/speax/speaxapp/views.py (simple_upload): incorporated pdf file type

	* xml_parser/xml_parser.py (xml_parser): modified to take string input

	* Web/speax/speaxapp/views.py (make_tracks): added local engine switch

	* Web/speax/speaxapp/views.py (get_json_response): request xml from grobid,
	and then json from xml_parser

2018-03-02  Sherry Lin  <sjslin@gmail.com>

	* xml_parser/xml_parser.py: [math] used for math formulas
	hyphenated word problems fixed
	empty tracks now say "No content found"
	added some code so testing is easier

2018-02-22  Andres Abdo  <andres@andres-ThinkPad-T450s>

	* Web/speax/speaxapp/templates/speaxapp/simple_upload.html: Added
	styling to the webportal using w3.css, and removed some of the old
	css.

2018-02-21  Hanjun Li  <h1212@g.ucla.edu>

	* interface/rpc_interface_pb2.py: messages definition compiled from
	rpc_interface.proto

	* interface/rpc_interface_pb2_grpc.py: server and client functions compiled from
	rpc_interface.proto

	* interface/rpc_interface.proto (ParsePDF, Chunk, jsonStr): remote procedure call
	interface definition.

	* test/test0.json: ground truth json; removed all newlines; changed track number;

2018-02-21  Sherry Lin  <sjslin@gmail.com>

	* xml_parser/xml_parser.py: fixed key order in dicts for json
	tracks dict contains "title and authors" and "abstract" now
	handles references and formulas